--- a/translations/en.json
+++ b/translations/en.json
@@ -44,6 +44,7 @@
   "AtencionesPrenatales": "Atenciones Prenatales",
   "atencionInmediata": "Atención Inmediata del RN",
   "babyGivenVitaminD": "Vitamina K Administrada al Bebé",
+  "babyGivenVitaminK": "Baby Given Vitamin K",
   "back": "Back",
   "balanceMetricDisplayed": "Métrica de Balance de Líquidos",
   "balanceOverview": "Balance de Líquidos",
@@ -64,6 +65,7 @@
   "cancelAppointment": "Cancel appointment",
   "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
   "Captada": "Captada",
+  "CaracterísticaLoquios": "Característica Loquios(Sangre)",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagemet": "Gestión de Casos",
   "caseManager": "Gestor de Casos",
@@ -198,12 +200,15 @@
   "frecuenciaRespiratoria": "Frecuencia Respiratoria (rpm)",
   "fromAge": "Desde Edad",
   "FUM": "FUM",
+  "genderPreselected": "Gender is pre-selected based on the profile",
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
+  "growthChart": "Growth Chart",
   "handleAppointment": "Atender Cita",
   "headCircumference": "Head Circumference",
   "height": "Height",
   "hepatitisB": "Hepatitis B",
+  "HeridaOperatoria": "Herida Operatoria",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
   "Hora de ingreso": "",
@@ -223,6 +228,7 @@
   "inPatientView": "Vista de Paciente Internado",
   "inPatientVisitMessage": "encuentro de paciente interno encontrado para la visita actual {{visitType}}",
   "interpretation": "Interpretation",
+  "InvoluciónUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de IPV",
   "ipvOutCome": "IPV Outcome",
   "ipvQuestions": "Preguntas IPV",
@@ -232,6 +238,7 @@
   "listingDate": "Fecha de registro",
   "livingWithClient": "Convive con el paciente",
   "loading": "Loading",
+  "loadingData": "Loading data...",
   "location": "Location",
   "male": "Hombre",
   "managePeers": "Gestionar Pares",
@@ -247,6 +254,7 @@
   "middleName": "Segundo nombre",
   "missedAppointmentDate": "Fecha de Cita Incumplida",
   "modeOfDelivery": "Modalidad del Parto",
+  "MonitorizaciónObstétrica": "Monitorización Obstétrica",
   "months": "meses",
   "motherGeneralCondition": "Condición general de la madre",
   "name": "Nombre",
@@ -266,6 +274,7 @@
   "nextVisitDate": "Próxima fecha de visita",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
+  "noChartDataAvailable": "No chart data available",
   "noContactToDisplay": "No hay datos de contacto para mostrar",
   "noCurrentAppointments": "There are no appointments scheduled for today to display for this patient",
   "noData": "No data available",
@@ -333,8 +342,11 @@
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Diagnóstico Primario",
   "PrimeraDosisAntitetanica": "1era dosis de vacuna antitetánica",
+  "print": "Print",
   "priorityOfAdmission": "Prioridad de Ingreso",
   "provider": "Proveedor",
+  "Puerperio": "Puerperio",
+  "PuerperioInmediato": "Puerperio Inmediato",
   "recommendedProcedure": "Procedimiento Recomendado",
   "recordLabourDetails": "Registrar detalles del parto",
   "recordNewbornVitals": "Registrar signos vitales neonatales",
@@ -404,6 +416,7 @@
   "tbScreening": "Resultado de tamizaje de TB",
   "temp": "Temp",
   "temperatura": "Temperatura (°C)",
+  "Temperatura": "Temperatura",
   "temperature": "Temperature",
   "temperatureAbbreviated": "Temp",
   "terminaciónGestaciónAnterior": "Terminación de gestación anterior",
@@ -424,12 +437,14 @@
   "Turno": "",
   "type": "Type",
   "typeOfSurgery": "Tipo de Cirugía",
+  "unknown": "Unknown",
   "unsavedChanges": "Unsaved Changes",
   "upcoming": "Upcoming",
   "upcomingAppointments": "Upcoming appointments",
   "upcomingCheckups": "Próximos controles",
   "updateError": "Error updating upcoming appointment",
   "updateForm": "Modificar formulario",
+  "updating": "Updating...",
   "urineCount": "Urine Count",
   "urineGrams": "Urine Volume (g/mL)",
   "uterusCondition": "Condición uterina PPH",
@@ -458,12 +473,7 @@
   "vomitGramsML": "Vomit Volume (g/mL)",
   "vomitoGramosML": "Vómito (g/mL)",
   "weight": "Peso (kg)",
-  "yes": "Sí",
-  "genderPreselected": "Gender is pre-selected based on the profile",
-  "growthChart": "Growth Chart",
-  "noChartDataAvailable": "No chart data available",
-  "print": "Print",
-  "updating": "Updating...",
   "Year": "",
-  "Years": ""
+  "Years": "",
+  "yes": "Sí"
 }
