--- a/translations/en.json
+++ b/translations/en.json
@@ -111,6 +111,7 @@
   "dateOfSurgery": "Date of Surgery",
   "datetime": "Date and Time",
   "datosAntropometricos": "Anthropometric Data",
+  "days": "días",
   "dead": "Deceased",
   "defaulterTracing": "Defaulter Tracing",
   "delete": "Delete",
@@ -265,6 +266,7 @@
   "names": "Names",
   "neonatalAbnormalities": "Neonatal Abnormalities",
   "neonatalCare": "Neonatal Care",
+  "neonatalCareTabs": "Lista de pestañas de cuidado neonatal",
   "NeonatalMonitoring": "Neonatal Vital Signs Monitoring",
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
@@ -309,6 +311,7 @@
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Use",
   "otrosAntecedentes": "Other History",
+  "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Oxygen Saturation",
   "partnerStatus": "Partner's HIV Status",
   "partograph": "Partograph",
