--- a/translations/es.json
+++ b/translations/es.json
@@ -10,7 +10,7 @@
   "additionalHealthServices": "Prestaciones Adicionales de Salud",
   "addNewVaccine": "Agregar nueva vacuna",
   "addPeer": "Agregar Par",
-  "addPNSContact": "Agregar Contacto PNS",
+  "addPNSContact": "Agregar relación",
   "addRelationship": "Agregar relación",
   "address": "Dirección",
   "addVaccine": "Agregar Vacuna",
@@ -334,7 +334,7 @@
   "placeOfDelivery": "Lugar del Parto",
   "pleaseFillField": "Por favor, complete al menos un campo",
   "pnsAproach": "Enfoque PNS",
-  "pnsContacts": "Contactos PNS",
+  "pnsContacts": "Historia Social",
   "populationType": "Tipo de Población",
   "posición": "Posición (O/I/NA)",
   "postnatalCare": "Control Postnatal",
