--- a/translations/en.json
+++ b/translations/en.json
@@ -1,5 +1,7 @@
 {
+  "abdomenCharacteristics": "Características del Abdomen",
   "abnormalValue": "Abnormal Value",
+  "abortion": "Abortion",
   "accidentOrTrauma": "Accident or Trauma",
   "action": "Action",
   "actions": "Actions",
@@ -24,7 +26,10 @@
   "alcoholUseDuration": "Duration of Alcohol Use",
   "alive": "Alive",
   "all": "All",
+  "allergies": "Allergies",
   "alturaUterina": "Uterine Height (cm)",
+  "analPermeability": "Permeabilidad Anal",
+  "analPermeabilityOther": "Otros para permeabilidad",
   "ancVisitNumber": "Prenatal Visit Number",
   "Antecedente": "Medical History",
   "antecedentes": "Medical History",
@@ -42,6 +47,7 @@
   "appointments": "Appointments",
   "appointmentToFulfill": "Select Appointment to Complete",
   "appointmentType": "Appointment Type",
+  "asthma": "Asthma",
   "AtencionesPrenatales": "Prenatal Care",
   "atencionInmediata": "Immediate Newborn Care",
   "babyGivenVitaminD": "Vitamin D Administered to Baby",
@@ -56,6 +62,7 @@
   "biometricDisplayed": "Displayed Biometric",
   "biometrics_lower": "biometrics",
   "birthInjuriesTrauma": "Birth Injuries/Trauma",
+  "birthWeight": "Birth Weight",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Loss",
   "bloodPressureAbbreviated": "BP",
@@ -71,15 +78,19 @@
   "caseManagemet": "Case Management",
   "caseManager": "Case Manager",
   "causeOfDeath": "Cause of Death",
+  "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
   "cervicalDilation": "Cervical Dilation (cm)",
   "chartView": "Chart View",
   "checkForValidity": "Some of the entered values are invalid",
   "chestCircumference": "Chest Circumference",
+  "chooseOption": "Choose an option",
   "chronicDisease": "Chronic Disease",
+  "clavicle": "Clavícula",
   "clean": "Clear",
   "clientEligibility": "Eligibility",
   "clinicalEncounter": "Clinical Encounter",
   "clinicalViews": "Clinical Views",
+  "cohabiting": "Cohabiting",
   "completed": "Completed",
   "completedCheckups": "Completed Checkups",
   "completedDocumentations": "Completed Documentation",
@@ -93,6 +104,7 @@
   "contactCreated": "Contact Created",
   "contacted": "Contacted",
   "contactList": "Contact List",
+  "cordClamping": "Clampeo del cordón",
   "createPatient": "Create Patient",
   "credControl": "Wellchild Care Control",
   "credSchedule": "Wellchild Care Follow-Up",
@@ -101,6 +113,7 @@
   "Current pregnancy": "Current Pregnancy",
   "currentAge": "Current Age",
   "customViews": "In this section you will find customized clinical views based on the patient's conditions and care programs.",
+  "dataNowAvailable": "They are now visible on the Perinatal Register",
   "date": "Date",
   "dateAndTime": "Date and Time",
   "dateDate": "Date and Time",
@@ -122,6 +135,7 @@
   "department": "Department",
   "deposicionesGramos": "Stool (g)",
   "descentOfHead": "Descent of the Head",
+  "diabetes": "Diabetes",
   "Diagnóstico": "Diagnosis",
   "disabilities": "Disabilities",
   "discard": "Discard",
@@ -130,10 +144,15 @@
   "discontinuationCases": "Discontinuation Cases",
   "discontinue": "Discontinue",
   "discontinued": "Discontinued",
+  "divorced": "Divorced",
   "dose": "Dose",
   "Drogas": "Drugs",
   "Duda": "Uncertainty",
   "dueAt": "Due At",
+  "ears": "Orejas",
+  "earsImplantationOther": "Otros para implantación",
+  "earsOther": "Otros para orejas",
+  "earsPositionOther": "Otros para ubicación",
   "EcografíaObstetricia": "Obstetric Ultrasound",
   "EcografíaObstetriciala": "Obstetric Ultrasound",
   "edadGestacional": "Gestational Age (weeks)",
@@ -159,11 +178,14 @@
   "endRelationship": "End Relationship",
   "enrolled": "Enrolled",
   "enterForm": "Enter Form",
+  "enterText": "Ingrese texto",
+  "enterValue": "Enter value",
   "epicrisis": "Epicrisis",
   "error": "Error",
   "errorFetchingbedInformation": "Error fetching bed information",
   "errorLoadingConcepts": "Error loading vaccination concepts",
   "errorLoadingPatient": "Error loading patient data.",
+  "esophagus": "Permeabilidad Esófago",
   "EV": {
     " Rec / 24h": ""
   },
@@ -198,6 +220,8 @@
   "fluidBalance": "Fluid Balance",
   "foetalPresentation": "Fetal Presentation",
   "followUpDate": "Follow-Up Date",
+  "fontanelle": "Fontanela",
+  "fontanelleOther": "Otros para fontanela",
   "formName": "Form Name",
   "formTitle": "Complete the form details",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
@@ -205,13 +229,20 @@
   "fromAge": "From Age",
   "FUM": "LMP",
   "genderPreselected": "Gender is preselected based on the profile",
+  "genitourinary": "Genito Urinario",
+  "genitourinaryElimination": "Eliminación Genito Urinario",
+  "genitourinaryEliminationOther": "Otros para eliminación",
+  "gestationalAge": "Gestational Age",
+  "gestationalDiabetes": "Gestational Diabetes",
   "gestationalSize": "Gestational Size",
   "GraficasObstétricas": "Obstetric Charts",
   "growthChart": "Growth Chart",
   "headCircumference": "Head Circumference",
+  "heartRate": "Frecuencia cardíaca",
   "height": "Height",
   "hepatitisB": "Hepatitis B",
   "HeridaOperatoria": "Surgical Wound",
+  "hip": "Cadera",
   "hivStatus": "HIV Status",
   "hivTestResults": "HIV Test Results",
   "Hora de ingreso": "Admission Time",
@@ -221,7 +252,10 @@
   "htsResult": "Final Result",
   "htsScreening": "HTS Screening",
   "htsTestType": "Test Type",
+  "hypertension": "Hypertension",
   "ICM": "ICM",
+  "immediateEvaluation": "Evaluación inmediata",
+  "immediateNewbornAttention": "Atención Inmediata del Recién Nacido",
   "immunization": "Immunization",
   "immunizationPlan": "Vaccination Schedule",
   "immunizationPlanBuilder": "Vaccination Schedule Management",
@@ -238,7 +272,12 @@
   "labourAndDelivery": "Labour and Delivery",
   "lactanciaMaterna": "Breastfeeding",
   "lastName": "Last Name",
+  "lastPregnancy": "Last Pregnancy Details",
+  "lastPregnancyDate": "Date of Last Pregnancy",
+  "limbs": "Extremidades",
+  "limbsOther": "Otros para extremidades",
   "listingDate": "Record Date",
+  "liveBirth": "Live Birth",
   "livingWithClient": "Living with the Patient",
   "loading": "Loading",
   "loadingData": "Loading data...",
@@ -250,20 +289,31 @@
   "manager": "Case Manager",
   "manageVaccinationSchedule": "Manage Vaccination Schedule",
   "maritalStatus": "Marital Status",
+  "married": "Married",
   "maternalCondition": "Maternal Condition",
   "maternalSummary": "Maternal Summary",
   "medicalHistory": "Medical History",
+  "medicalHistoryFather": "Medical History of the Father",
+  "medicalHistoryMother": "Medical History of the Mother",
+  "mentalHealth": "Mental Health History",
   "MesgestaciónprimeraAntitetánica": "Gestational Month of the First Tetanus Vaccination",
   "MesgestaciónsegundaAntitetánica": "Gestational Month of the Second Tetanus Vaccination",
   "miccionesGramos": "Urinations (g/mL)",
   "middleName": "Middle Name",
+  "miscarriage": "Miscarriage",
   "missedAppointmentDate": "Missed Appointment Date",
   "modeOfDelivery": "Mode of Delivery",
   "MonitorizaciónObstétrica": "Obstetric Monitoring",
   "months": "Months",
   "motherGeneralCondition": "Mother's General Condition",
+  "mouth": "Boca",
+  "mouthOther": "Otros para boca",
+  "muscleTone": "Tono Muscular",
+  "muscleToneOther": "Otros para tono muscular",
   "name": "Name",
   "names": "Names",
+  "neck": "Cuello",
+  "neckOther": "Otros para cuello",
   "neonatalAbnormalities": "Neonatal Abnormalities",
   "neonatalCare": "Neonatal Care",
   "neonatalCareTabs": "Lista de pestañas de cuidado neonatal",
@@ -271,6 +321,8 @@
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
   "neonatalvitalsRecorded": "Newborn Balance Recorded",
+  "neurologicalEvaluation": "Valoración Neurológica",
+  "neurologicalEvaluationOther": "Otros para valoración neurológica",
   "newbornAntropometrics": "Newborn Anthropometrics",
   "newbornBalanceHeader": "Newborn Balance",
   "newbornCare": "Newborn Care",
@@ -278,6 +330,7 @@
   "next": "Next",
   "nextMonth": "Next Month",
   "nextVisitDate": "Next Visit Date",
+  "nipples": "Mamilas",
   "no": "No",
   "noActiveCasesToDisplay": "No active cases to display.",
   "noChartDataAvailable": "No chart data available.",
@@ -295,7 +348,9 @@
   "noPastAppointments": "No past appointments to display for this patient.",
   "nopeers": "No peers to display for this peer educator.",
   "noSchemas": "No schemas available",
+  "nose": "Nariz",
   "noSearchItems": "No vaccines found",
+  "noseOther": "Otros para nariz",
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "No upcoming appointments for this patient",
@@ -303,16 +358,21 @@
   "numeroDeposiciones": "Number of Stools",
   "numeroMicciones": "Number of Urinations",
   "numeroVomito": "Number of Vomits",
+  "observation": "Observación",
   "onDate": "On Date",
   "operatingDoctor": "Operating Physician",
   "optional": "Optional",
   "Orina / 24h": "Urine / 24h",
+  "orinaElimination": "Eliminación de orina",
   "other": "Other",
+  "otherComplications": "Specify other complications",
+  "otherMedicalHistory": "Specify other medical history",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Use",
   "otrosAntecedentes": "Other History",
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Oxygen Saturation",
+  "parentInformation": "Información a los padres",
   "partnerStatus": "Partner's HIV Status",
   "partograph": "Partograph",
   "partographData": "Vital Components",
@@ -328,6 +388,9 @@
   "pending": "Pending",
   "pendingDocumentations": "Pending Documentation",
   "perinatal": "Maternal-Perinatal Registration",
+  "perinatalDataRecorded": "Perinatal Data Recorded",
+  "perinatalDataSaveError": "Error saving perinatal data",
+  "perinatalRegister": "Perinatal Maternal Carnet",
   "Peso": "Weight (Kg)",
   "pesoMadre": "Mother's Weight (kg)",
   "phoneNumber": "Phone Number",
@@ -342,9 +405,12 @@
   "postOperativeComplications": "Postoperative Complications",
   "postOperativeDiagnosis": "Postoperative Diagnosis",
   "pphCondition": "PPH Present",
+  "preeclampsia": "Preeclampsia",
   "preferedPNSAproach": "Preferred PNS Approach",
+  "pregnancyOutcome": "Pregnancy Outcome",
   "presentación": "Presentation (C/P/NA)",
   "presionSistolica": "Systolic Pressure (mmHg)",
+  "pretermLabor": "Preterm Labor",
   "prev": "Previous",
   "previousMonth": "Previous Month",
   "primaryDiagnosis": "Primary Diagnosis",
@@ -359,11 +425,13 @@
   "recordNewbornVitals": "Record Neonatal Vital Signs",
   "Referida": "Referred",
   "referrals": "Referrals",
+  "reflexIrritability": "Irritabilidad refleja",
   "relation": "Relationship",
   "relationship": "Relationship",
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to continue?",
   "relationshipError": "Relationship Error",
   "relationshipErrorMessage": "Request Failed",
+  "relationshipStatus": "Relationship Status",
   "relationshipType": "Relationship Type",
   "relationToPatient": "Relationship to Patient",
   "remove": "Remove Dose",
@@ -372,6 +440,7 @@
   "reportingYear": "Reporting Year",
   "required": "Required",
   "respirationRate": "Respiration Rate",
+  "respiratoryEffort": "Esfuerzo respiratorio",
   "respiratoryRate": "Respiratory Rate",
   "respiratoryRateAbbreviated": "Resp. Rate",
   "RlshipError": "Request failed...",
@@ -397,25 +466,34 @@
   "selectDateAndTime": "Select a date and time for the appointment",
   "selectSchema": "Select a Schema",
   "selectVaccine": "Select a Vaccine",
+  "selectValue": "Seleccione un valor",
   "service": "Service",
   "sex": "Sex",
   "sexualAssault": "3. Has he/she ever forced you to do something sexual that made you feel uncomfortable?",
+  "silvermanScore": "Puntuación de Silverman",
   "sinAtenciones": "Prenatal Care",
+  "single": "Single",
   "situación": "Situation (L,T,NA)",
+  "skinColor": "Color de Piel",
   "smoking": "Smoking",
   "smokingDuration": "Duration of Smoking",
   "socialHistory": "Social History",
+  "spinalColumn": "Columna Vertebral",
+  "spinalColumnOther": "Otros para columna vertebral",
   "spo2": "SpO₂",
   "startDate": "Start Date",
   "status": "Status",
   "statusAtDischarge": "Status at Discharge",
+  "stillbirth": "Stillbirth",
   "stoolCount": "Stool Count",
+  "stoolElimination": "Eliminación de heces",
   "stoolGrams": "Stool Weight (g)",
   "submit": "Submit",
   "successfullyDeleted": "Successfully Deleted",
   "summaryMonitoring": "Summary and Monitoring",
   "surgicalHistory": "Surgical History",
   "surgicalSummary": "Surgical Summary",
+  "sutures": "Suturas",
   "systolic": "Systolic",
   "systolicPressure": "Systolic Pressure (mmHg)",
   "tableView": "Table View",
@@ -434,6 +512,7 @@
   "testingRecommended": "Test Recommended",
   "testStrategy": "Test Strategy",
   "therapiesPrescribed": "Prescribed Therapies",
+  "thorax": "Tórax",
   "threatened": "2. Has he/she ever threatened to harm you?",
   "timeRecorded": "Time Recorded",
   "today": "Today",
@@ -444,6 +523,7 @@
   "Turno": "Shift",
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
+  "umbilicalCord": "Cordón Umbilical",
   "unknown": "Unknown",
   "unsavedChanges": "Unsaved Changes",
   "upcoming": "Upcoming",
@@ -476,10 +556,12 @@
   "vitalSignDisplayed": "Displayed Vital Sign",
   "vitalSigns": "Vital Signs",
   "vitalsNewborn": "Newborn Monitoring",
+  "vitaminKAdmin": "Administración de Vitamina K",
   "vomitCount": "Vomit Count",
   "vomitGramsML": "Vomit Volume (g/mL)",
   "vomitoGramosML": "Vomit (g/mL)",
   "weight": "Weight (kg)",
+  "widowed": "Widowed",
   "Year": "Year",
   "Years": "Years",
   "yes": "Yes"
