--- a/translations/es.json
+++ b/translations/es.json
@@ -1,5 +1,7 @@
 {
+  "abdomenCharacteristics": "Características del Abdomen",
   "abnormalValue": "Valor anormal",
+  "abortion": "Abortion",
   "accidentOrTrauma": "Accidente o Trauma",
   "action": "Acción",
   "actions": "Acciones",
@@ -24,7 +26,10 @@
   "alcoholUseDuration": "Duración de Consumo de Alcohol",
   "alive": "Vivo",
   "all": "Todos",
+  "allergies": "Allergies",
   "alturaUterina": "Altura Uterina (cm)",
+  "analPermeability": "Permeabilidad Anal",
+  "analPermeabilityOther": "Otros para permeabilidad",
   "ancVisitNumber": "Número de Visita de Control Prenatal",
   "Antecedente": "Antecedente",
   "antecedentes": "antecedentes",
@@ -42,6 +47,7 @@
   "appointments": "Citas",
   "appointmentToFulfill": "Seleccionar cita a completar",
   "appointmentType": "Tipo de cita",
+  "asthma": "Asthma",
   "AtencionesPrenatales": "Atenciones Prenatales",
   "atencionInmediata": "Atención Inmediata",
   "babyGivenVitaminD": "Vitamina D Administrada al Bebé",
@@ -56,6 +62,7 @@
   "biometricDisplayed": "Dato Biométrico mostrado",
   "biometrics_lower": "biometría",
   "birthInjuriesTrauma": "Traumatismos/Lesiones al Nacer",
+  "birthWeight": "Birth Weight",
   "bloodGroup": "Grupo Sanguíneo",
   "bloodLoss": "Pérdida de Sangre",
   "bloodPressureAbbreviated": "PA",
@@ -71,15 +78,19 @@
   "caseManagemet": "Gestión de Casos",
   "caseManager": "Gestor de Casos",
   "causeOfDeath": "Causa de Muerte",
+  "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
   "checkForValidity": "Algunos valores ingresados no son válidos",
   "chestCircumference": "Circunferencia Torácica",
+  "chooseOption": "Choose an option",
   "chronicDisease": "Enfermedad Crónica",
+  "clavicle": "Clavícula",
   "clean": "Limpiar",
   "clientEligibility": "Elegibilidad",
   "clinicalEncounter": "Encuentro Clínico",
   "clinicalViews": "Vistas Clínicas",
+  "cohabiting": "Cohabiting",
   "completed": "Completado",
   "completedCheckups": "Controles Realizados",
   "completedDocumentations": "Documentación Completada",
@@ -93,6 +104,7 @@
   "contactCreated": "Contacto Creado",
   "contacted": "Contactado",
   "contactList": "Lista de Contactos",
+  "cordClamping": "Clampeo del cordón",
   "createPatient": "Crear Paciente",
   "credControl": "Control CRED",
   "credSchedule": "Seguimiento CRED",
@@ -101,6 +113,7 @@
   "Current pregnancy": "Embarazo Actual",
   "currentAge": "Edad Actual",
   "customViews": "En esta sección encontrará vistas clínicas personalizadas según las condiciones del paciente y los programas de atención.",
+  "dataNowAvailable": "They are now visible on the Perinatal Register",
   "date": "Fecha",
   "dateAndTime": "Fecha y Hora",
   "dateDate": "Fecha y Hora",
@@ -122,6 +135,7 @@
   "department": "Departamento",
   "deposicionesGramos": "Deposiciones (g)",
   "descentOfHead": "Descenso de la Cabeza",
+  "diabetes": "Diabetes",
   "Diagnóstico": "Diagnóstico",
   "disabilities": "Discapacidades",
   "discard": "Descartar",
@@ -130,10 +144,15 @@
   "discontinuationCases": "Casos de Descontinuación",
   "discontinue": "Descontinuar",
   "discontinued": "Descontinuado",
+  "divorced": "Divorced",
   "dose": "Dosis",
   "Drogas": "Drogas",
   "Duda": "Duda",
   "dueAt": "A los",
+  "ears": "Orejas",
+  "earsImplantationOther": "Otros para implantación",
+  "earsOther": "Otros para orejas",
+  "earsPositionOther": "Otros para ubicación",
   "EcografíaObstetricia": "Ecografía de Obstetricia",
   "edadGestacional": "Edad Gestacional (semanas)",
   "EdadgestacionalactualFUM": "Edad Gestacional Actual (FUM)",
@@ -158,11 +177,14 @@
   "endRelationship": "Terminar Relación",
   "enrolled": "Inscrito",
   "enterForm": "Ingresar Formulario",
+  "enterText": "Ingrese texto",
+  "enterValue": "Enter value",
   "epicrisis": "Epicrisis",
   "error": "Error",
   "errorFetchingbedInformation": "Error al obtener información de camas",
   "errorLoadingConcepts": "Error al cargar los conceptos de vacunación",
   "errorLoadingPatient": "Error al cargar los datos del paciente.",
+  "esophagus": "Permeabilidad Esófago",
   "EV": {
     " Rec / 24h": "Rec / 24h"
   },
@@ -197,6 +219,8 @@
   "fluidBalance": "Balance de Líquidos",
   "foetalPresentation": "Presentación Fetal",
   "followUpDate": "Próxima fecha de seguimiento",
+  "fontanelle": "Fontanela",
+  "fontanelleOther": "Otros para fontanela",
   "formName": "Nombre del Formulario",
   "formTitle": "Complete los detalles del formulario",
   "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
@@ -204,13 +228,20 @@
   "fromAge": "Desde Edad",
   "FUM": "FUM",
   "genderPreselected": "El género está preseleccionado según el perfil",
+  "genitourinary": "Genito Urinario",
+  "genitourinaryElimination": "Eliminación Genito Urinario",
+  "genitourinaryEliminationOther": "Otros para eliminación",
+  "gestationalAge": "Gestational Age",
+  "gestationalDiabetes": "Gestational Diabetes",
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
   "growthChart": "Gráfico de Crecimiento",
   "headCircumference": "Circunferencia de la cabeza",
+  "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
   "hepatitisB": "Hepatitis B",
   "HeridaOperatoria": "Herida Operatoria",
+  "hip": "Cadera",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
   "Hora de ingreso": "Hora de Ingreso",
@@ -220,7 +251,10 @@
   "htsResult": "Resultado final",
   "htsScreening": "Tamizaje HTS",
   "htsTestType": "Tipo de prueba",
+  "hypertension": "Hypertension",
   "ICM": "ICM",
+  "immediateEvaluation": "Evaluación inmediata",
+  "immediateNewbornAttention": "Atención Inmediata del Recién Nacido",
   "immunization": "Inmunización",
   "immunizationPlan": "Esquema de Vacunación",
   "immunizationPlanBuilder": "Gestión del Esquema de Vacunación",
@@ -237,7 +271,12 @@
   "labourAndDelivery": "Trabajo de Parto y Parto",
   "lactanciaMaterna": "Lactancia Materna",
   "lastName": "Apellido",
+  "lastPregnancy": "Last Pregnancy Details",
+  "lastPregnancyDate": "Date of Last Pregnancy",
+  "limbs": "Extremidades",
+  "limbsOther": "Otros para extremidades",
   "listingDate": "Fecha de Registro",
+  "liveBirth": "Live Birth",
   "livingWithClient": "Convive con el Paciente",
   "loading": "Cargando",
   "loadingData": "Cargando datos...",
@@ -249,20 +288,31 @@
   "manager": "Gestor de Casos",
   "manageVaccinationSchedule": "Gestionar Agenda de Vacunación",
   "maritalStatus": "Estado Civil",
+  "married": "Married",
   "maternalCondition": "Condición Materna",
   "maternalSummary": "Resumen Materno",
   "medicalHistory": "Historial Médico",
+  "medicalHistoryFather": "Medical History of the Father",
+  "medicalHistoryMother": "Medical History of the Mother",
+  "mentalHealth": "Mental Health History",
   "MesgestaciónprimeraAntitetánica": "Mes de Gestación de la Primera Vacunación Antitetánica",
   "MesgestaciónsegundaAntitetánica": "Mes de Gestación de la Segunda Vacunación Antitetánica",
   "miccionesGramos": "Micciones (g/mL)",
   "middleName": "Segundo Nombre",
+  "miscarriage": "Miscarriage",
   "missedAppointmentDate": "Fecha de Cita Incumplida",
   "modeOfDelivery": "Modalidad del Parto",
   "MonitorizaciónObstétrica": "Monitorización Obstétrica",
   "months": "Meses",
   "motherGeneralCondition": "Condición General de la Madre",
+  "mouth": "Boca",
+  "mouthOther": "Otros para boca",
+  "muscleTone": "Tono Muscular",
+  "muscleToneOther": "Otros para tono muscular",
   "name": "Nombre",
   "names": "Nombres",
+  "neck": "Cuello",
+  "neckOther": "Otros para cuello",
   "neonatalAbnormalities": "Anormalidades Neonatales",
   "neonatalCare": "Cuidado Neonatal",
   "neonatalCareTabs": "Lista de pestañas de cuidado neonatal",
@@ -270,6 +320,8 @@
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
   "neonatalvitalsRecorded": "Balance del Recién Nacido Registrado",
+  "neurologicalEvaluation": "Valoración Neurológica",
+  "neurologicalEvaluationOther": "Otros para valoración neurológica",
   "newbornAntropometrics": "Datos Antropométricos del Recién Nacido",
   "newbornBalanceHeader": "Balance del Recién Nacido",
   "newbornCare": "Atención del Recién Nacido",
@@ -277,6 +329,7 @@
   "next": "Siguiente",
   "nextMonth": "Próximo Mes",
   "nextVisitDate": "Próxima Fecha de Visita",
+  "nipples": "Mamilas",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
   "noChartDataAvailable": "No hay datos de gráfico disponibles.",
@@ -294,7 +347,9 @@
   "noPastAppointments": "No hay citas pasadas para mostrar para este paciente.",
   "nopeers": "No hay pares para mostrar para este educador de pares.",
   "noSchemas": "No hay esquemas disponibles",
+  "nose": "Nariz",
   "noSearchItems": "No se encontraron vacunas",
+  "noseOther": "Otros para nariz",
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas para este paciente",
@@ -302,16 +357,21 @@
   "numeroDeposiciones": "N° Deposiciones",
   "numeroMicciones": "N° Micciones",
   "numeroVomito": "N° Vómitos",
+  "observation": "Observación",
   "onDate": "En la fecha",
   "operatingDoctor": "Médico Operador",
   "optional": "Opcional",
   "Orina / 24h": "Orina / 24h",
+  "orinaElimination": "Eliminación de orina",
   "other": "Otro",
+  "otherComplications": "Specify other complications",
+  "otherMedicalHistory": "Specify other medical history",
   "otherRelationships": "Otras Relaciones",
   "otherSubstanceAbuse": "Consumo de Otras Sustancias",
   "otrosAntecedentes": "Otros Antecedentes",
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Saturación de oxígeno",
+  "parentInformation": "Información a los padres",
   "partnerStatus": "Estado VIH de la pareja",
   "partograph": "Partograma",
   "partographData": "Componentes Vitales",
@@ -327,6 +387,9 @@
   "pending": "Pendiente",
   "pendingDocumentations": "Documentación Pendiente",
   "perinatal": "Inscripción Materno Perinatal",
+  "perinatalDataRecorded": "Perinatal Data Recorded",
+  "perinatalDataSaveError": "Error saving perinatal data",
+  "perinatalRegister": "Perinatal Maternal Carnet",
   "Peso": "Peso (Kg)",
   "pesoMadre": "Peso Madre (kg)",
   "phoneNumber": "Número de Teléfono",
@@ -341,9 +404,12 @@
   "postOperativeComplications": "Complicaciones Postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico Postoperatorio",
   "pphCondition": "PPH presente",
+  "preeclampsia": "Preeclampsia",
   "preferedPNSAproach": "Enfoque PNS Preferido",
+  "pregnancyOutcome": "Pregnancy Outcome",
   "presentación": "Presentación (C/P/NA)",
   "presionSistolica": "Presión Sistólica (mmHg)",
+  "pretermLabor": "Preterm Labor",
   "prev": "Anterior",
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico Primario",
@@ -358,11 +424,13 @@
   "recordNewbornVitals": "Registrar signos vitales neonatales",
   "Referida": "Referida",
   "referrals": "Derivaciones",
+  "reflexIrritability": "Irritabilidad refleja",
   "relation": "Parentesco",
   "relationship": "Relación",
   "relationshipConfirmationText": "Esto terminará la relación. ¿Está seguro de continuar?",
   "relationshipError": "Error de Relación",
   "relationshipErrorMessage": "Solicitud Fallida",
+  "relationshipStatus": "Relationship Status",
   "relationshipType": "Tipo de Relación",
   "relationToPatient": "Relación con el paciente",
   "remove": "Eliminar dosis",
@@ -371,6 +439,7 @@
   "reportingYear": "Año Reportado",
   "required": "Requerido",
   "respirationRate": "Frecuencia Respiratoria",
+  "respiratoryEffort": "Esfuerzo respiratorio",
   "respiratoryRate": "Frecuencia Resp.",
   "respiratoryRateAbbreviated": "F. Resp.",
   "RlshipError": "Falla en la solicitud...",
@@ -396,25 +465,34 @@
   "selectDateAndTime": "Selecciona una fecha y hora para la cita",
   "selectSchema": "Seleccionar un Esquema",
   "selectVaccine": "Seleccionar una Vacuna",
+  "selectValue": "Seleccione un valor",
   "service": "Servicio",
   "sex": "Sexo",
   "sexualAssault": "3. ¿Alguna vez él/ella le ha obligado a hacer algo sexual que le haya hecho sentir incómodo/a?",
+  "silvermanScore": "Puntuación de Silverman",
   "sinAtenciones": "Atenciones Prenatales",
+  "single": "Single",
   "situación": "Situación (L,T,NA)",
+  "skinColor": "Color de Piel",
   "smoking": "Tabaquismo",
   "smokingDuration": "Duración del Tabaquismo",
   "socialHistory": "Historial Social",
+  "spinalColumn": "Columna Vertebral",
+  "spinalColumnOther": "Otros para columna vertebral",
   "spo2": "SpO₂",
   "startDate": "Fecha de Inicio",
   "status": "Estado",
   "statusAtDischarge": "Estado al Alta",
+  "stillbirth": "Stillbirth",
   "stoolCount": "Recuento de Heces",
+  "stoolElimination": "Eliminación de heces",
   "stoolGrams": "Peso de Heces (g)",
   "submit": "Enviar",
   "successfullyDeleted": "Eliminado exitosamente",
   "summaryMonitoring": "Resumen y Monitoreo",
   "surgicalHistory": "Historial Quirúrgico",
   "surgicalSummary": "Resumen Quirúrgico",
+  "sutures": "Suturas",
   "systolic": "Sistólica",
   "systolicPressure": "Presión Sistólica (mmHg)",
   "tableView": "Vista de Tabla",
@@ -433,6 +511,7 @@
   "testingRecommended": "Prueba Recomendada",
   "testStrategy": "Estrategia",
   "therapiesPrescribed": "Terapias Recetadas",
+  "thorax": "Tórax",
   "threatened": "2. ¿Alguna vez él/ella ha amenazado con hacerle daño?",
   "timeRecorded": "Hora Registrada",
   "today": "Hoy",
@@ -443,6 +522,7 @@
   "Turno": "Turno",
   "type": "Tipo",
   "typeOfSurgery": "Tipo de Cirugía",
+  "umbilicalCord": "Cordón Umbilical",
   "unknown": "Desconocido",
   "unsavedChanges": "Cambios no guardados",
   "upcoming": "Próximo",
@@ -475,10 +555,12 @@
   "vitalSignDisplayed": "Signo Vital Mostrado",
   "vitalSigns": "Signos Vitales",
   "vitalsNewborn": "Monitoreo del Recién Nacido",
+  "vitaminKAdmin": "Administración de Vitamina K",
   "vomitCount": "Recuento de Vómitos",
   "vomitGramsML": "Volumen de Vómito (g/mL)",
   "vomitoGramosML": "Vómito (g/mL)",
   "weight": "Peso (kg)",
+  "widowed": "Widowed",
   "Year": "Año",
   "Years": "Años",
   "yes": "Sí"
